// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai acp --help 1`] = `
"queryai acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: queryai.local)
                                                                 [string] [default: "queryai.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai mcp --help 1`] = `
"queryai mcp

manage MCP (Model Context Protocol) servers

Commands:
  queryai mcp add [name]     add an MCP server
  queryai mcp list           list MCP servers and their status                         [aliases: ls]
  queryai mcp auth [name]    authenticate with an OAuth-enabled MCP server
  queryai mcp logout [name]  remove OAuth credentials for an MCP server
  queryai mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai attach --help 1`] = `
"queryai attach <url>

attach to a running queryai server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to QUERYAI_SERVER_PASSWORD)             [string]
  -u, --username      basic auth username (defaults to QUERYAI_SERVER_USERNAME or 'queryai')[string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai run --help 1`] = `
"queryai run [message..]

run queryai with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
      --share        share the session                                                     [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running queryai server (e.g., http://localhost:4096)       [string]
  -p, --password     basic auth password (defaults to QUERYAI_SERVER_PASSWORD)              [string]
  -u, --username     basic auth username (defaults to QUERYAI_SERVER_USERNAME or 'queryai') [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai debug --help 1`] = `
"queryai debug

debugging and troubleshooting tools

Commands:
  queryai debug config        show resolved configuration
  queryai debug lsp           LSP debugging utilities
  queryai debug rg            ripgrep debugging utilities
  queryai debug file          file system debugging utilities
  queryai debug scrap         list all known projects
  queryai debug skill         list all available skills
  queryai debug snapshot      snapshot debugging utilities
  queryai debug startup       print startup timing
  queryai debug agent <name>  show agent configuration details
  queryai debug v2            debug v2 catalog and built-in plugins
  queryai debug info          show debug information
  queryai debug paths         show global paths (data, config, cache, state)
  queryai debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai providers --help 1`] = `
"queryai providers

manage AI providers and credentials

Commands:
  queryai providers list               list providers and credentials                  [aliases: ls]
  queryai providers login [url]        log in to a provider
  queryai providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai agent --help 1`] = `
"queryai agent

manage agents

Commands:
  queryai agent create  create a new agent
  queryai agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai upgrade --help 1`] = `
"queryai upgrade [target]

upgrade queryai to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai uninstall --help 1`] = `
"queryai uninstall

uninstall queryai and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai serve --help 1`] = `
"queryai serve

starts a headless queryai server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: queryai.local)
                                                                 [string] [default: "queryai.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai web --help 1`] = `
"queryai web

start queryai server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: queryai.local)
                                                                 [string] [default: "queryai.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai models --help 1`] = `
"queryai models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai stats --help 1`] = `
"queryai stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai export --help 1`] = `
"queryai export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai import --help 1`] = `
"queryai import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai github --help 1`] = `
"⠀                                 
█▀▀█ █  █ █▀▀▀ █▀▀█ █  █ █▀▀█ ▀▀▀▀
█  █ █  █ █▀▀▀ █▀▀▄ ▀▄▄▀ █▀▀█  ██ 
▀▀▀▄ ▀▀▀▀ ▀▀▀▀ ▀  ▀  ▀▀  ▀  ▀ ▀▀▀▀

Commands:
  queryai completion          generate shell completion script
  queryai acp                 start ACP (Agent Client Protocol) server
  queryai mcp                 manage MCP (Model Context Protocol) servers
  queryai [project]           start queryai tui                                            [default]
  queryai attach <url>        attach to a running queryai server
  queryai run [message..]     run queryai with a message
  queryai debug               debugging and troubleshooting tools
  queryai providers           manage AI providers and credentials                    [aliases: auth]
  queryai agent               manage agents
  queryai upgrade [target]    upgrade queryai to the latest or a specific version
  queryai uninstall           uninstall queryai and remove all related files
  queryai serve               starts a headless queryai server
  queryai web                 start queryai server and open web interface
  queryai models [provider]   list all available models
  queryai stats               show token usage and cost statistics
  queryai export [sessionID]  export session data as JSON
  queryai import <file>       import session data from JSON file or URL
  queryai pr <number>         fetch and checkout a GitHub PR branch, then run queryai
  queryai session             manage sessions
  queryai plugin <module>     install plugin and update config                       [aliases: plug]
  queryai db                  database tools

Positionals:
  project  path to start queryai in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: queryai.local)
                                                                 [string] [default: "queryai.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai pr --help 1`] = `
"queryai pr <number>

fetch and checkout a GitHub PR branch, then run queryai

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai session --help 1`] = `
"queryai session

manage sessions

Commands:
  queryai session list                list sessions
  queryai session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai plugin --help 1`] = `
"queryai plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai db --help 1`] = `
"queryai db

database tools

Commands:
  queryai db [query]     open an interactive sqlite3 shell or run a query                  [default]
  queryai db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai mcp list --help 1`] = `
"queryai mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai mcp add --help 1`] = `
"queryai mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai mcp auth --help 1`] = `
"queryai mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  queryai mcp auth list  list OAuth-capable MCP servers and their auth status          [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai mcp logout --help 1`] = `
"queryai mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai providers list --help 1`] = `
"queryai providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai providers login --help 1`] = `
"queryai providers login [url]

log in to a provider

Positionals:
  url  queryai auth provider                                                                [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai providers logout --help 1`] = `
"queryai providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai agent create --help 1`] = `
"queryai agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai agent list --help 1`] = `
"queryai agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai session list --help 1`] = `
"queryai session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai session delete --help 1`] = `
"queryai session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai github install --help 1`] = `
"⠀                                 
█▀▀█ █  █ █▀▀▀ █▀▀█ █  █ █▀▀█ ▀▀▀▀
█  █ █  █ █▀▀▀ █▀▀▄ ▀▄▄▀ █▀▀█  ██ 
▀▀▀▄ ▀▀▀▀ ▀▀▀▀ ▀  ▀  ▀▀  ▀  ▀ ▀▀▀▀

Commands:
  queryai completion          generate shell completion script
  queryai acp                 start ACP (Agent Client Protocol) server
  queryai mcp                 manage MCP (Model Context Protocol) servers
  queryai [project]           start queryai tui                                            [default]
  queryai attach <url>        attach to a running queryai server
  queryai run [message..]     run queryai with a message
  queryai debug               debugging and troubleshooting tools
  queryai providers           manage AI providers and credentials                    [aliases: auth]
  queryai agent               manage agents
  queryai upgrade [target]    upgrade queryai to the latest or a specific version
  queryai uninstall           uninstall queryai and remove all related files
  queryai serve               starts a headless queryai server
  queryai web                 start queryai server and open web interface
  queryai models [provider]   list all available models
  queryai stats               show token usage and cost statistics
  queryai export [sessionID]  export session data as JSON
  queryai import <file>       import session data from JSON file or URL
  queryai pr <number>         fetch and checkout a GitHub PR branch, then run queryai
  queryai session             manage sessions
  queryai plugin <module>     install plugin and update config                       [aliases: plug]
  queryai db                  database tools

Positionals:
  project  path to start queryai in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: queryai.local)
                                                                 [string] [default: "queryai.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai github run --help 1`] = `
"⠀                                 
█▀▀█ █  █ █▀▀▀ █▀▀█ █  █ █▀▀█ ▀▀▀▀
█  █ █  █ █▀▀▀ █▀▀▄ ▀▄▄▀ █▀▀█  ██ 
▀▀▀▄ ▀▀▀▀ ▀▀▀▀ ▀  ▀  ▀▀  ▀  ▀ ▀▀▀▀

Commands:
  queryai completion          generate shell completion script
  queryai acp                 start ACP (Agent Client Protocol) server
  queryai mcp                 manage MCP (Model Context Protocol) servers
  queryai [project]           start queryai tui                                            [default]
  queryai attach <url>        attach to a running queryai server
  queryai run [message..]     run queryai with a message
  queryai debug               debugging and troubleshooting tools
  queryai providers           manage AI providers and credentials                    [aliases: auth]
  queryai agent               manage agents
  queryai upgrade [target]    upgrade queryai to the latest or a specific version
  queryai uninstall           uninstall queryai and remove all related files
  queryai serve               starts a headless queryai server
  queryai web                 start queryai server and open web interface
  queryai models [provider]   list all available models
  queryai stats               show token usage and cost statistics
  queryai export [sessionID]  export session data as JSON
  queryai import <file>       import session data from JSON file or URL
  queryai pr <number>         fetch and checkout a GitHub PR branch, then run queryai
  queryai session             manage sessions
  queryai plugin <module>     install plugin and update config                       [aliases: plug]
  queryai db                  database tools

Positionals:
  project  path to start queryai in                                                         [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: queryai.local)
                                                                 [string] [default: "queryai.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`queryai CLI help-text snapshots every documented command emits stable help text: queryai db path --help 1`] = `
"queryai db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
